deployment/backend-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: backend-api
  name: backend-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend-api
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/apartments-net: "true"
        io.kompose.service: backend-api
    spec:
      containers:
        - args:
            - bash
            - -c
            - npm install && npm run dev
          image: backend-api
          name: backend-api
          ports:
            - containerPort: 8000
          resources: {}
          volumeMounts:
            - mountPath: /app/node_modules
              name: backend-api-claim0
            - mountPath: /app
              name: backend-api-claim1
      restartPolicy: Always
      volumes:
        - name: backend-api-claim0
          persistentVolumeClaim:
            claimName: backend-api-claim0
        - name: backend-api-claim1
          persistentVolumeClaim:
            claimName: backend-api-claim1
status: {}
